# homework

./: .gitignore  CMakeLists.txt  README.md
include/: median.hxx
src/: CMakeLists.txt  median.cpp
test/: pass_and_fail_test.cpp
